2011-11-11	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.1:
		- add button 6 as a working GPIO key
		- add buzzer support

2011-11-02	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Freeze to PTXdist-2011.11.0

2011-10-27	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .8
	* Kernel 3.1:
		- Use most recent Linux release

2011-10-21	Juergen Beisert <jbe@pengutronix.de>

	* Barebox 2011.05.0: Back to development

2011-10-18	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- back to development
		- keep in sync with stable release .7

2011-10-14	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Back to development

2011-10-13	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Freeze to PTXdist-2011.10.1
	* Barebox 2011.05.0: Release ptx-2011.10.0
	* Kernel 3.0.6: Release ptx-2011.10.0
	* Platform: Release Octoberr 2011 (2011.10.0)

2011-10-04	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
	        - back to development
	        - keep in sync with stable release .6

2011-09-10	Juergen Beisert <jbe@pengutronix.de>

	* Platform:
		- back to development
	* Kernel 3.0
	        - back to development
	        - (aarghh) really handle display's physical size in kernel
	        - Release ptx-2011.09.1
	* Platform: 2nd release September 2011 (2011.09.1)

2011-09-09	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Freeze to PTXdist-2011.09.0
	* All kernels: Release ptx-2011.09.0
	* Barebox 2011.05.0: Release ptx-2011.09.0
	* Kernel 3.0: Enable more options to make it run with other root
		      filesystems as well
	* Platform: Release September 2011 (2011.09.0)

2011-09-07	amit shah <techlist.amit@gmail.com>

	* Kernel 3.0:
	        - add the N43i display unit to the list of known devices

2011-09-03	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- let the kernel handle the physical display size
		- do not use display size set in userland

2011-08-30	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0: