@@ -1606,6 +1606,7 @@ PTXCONF_EVTEST_EVTEST=y
 # PTXCONF_LTP is not set
 # PTXCONF_MBW is not set
 # PTXCONF_PELTS_TESTS is not set
+PTXCONF_RING_BELL=y
 PTXCONF_RT_TESTS=y
 PTXCONF_RT_TESTS_CYCLICTEST=y
 # PTXCONF_RT_TESTS_HACKBENCH is not set
