@@ -1619,6 +1619,7 @@ PTXCONF_EVTEST_EVTEST=y
 # PTXCONF_LTP is not set
 # PTXCONF_MBW is not set
 # PTXCONF_PELTS_TESTS is not set
+PTXCONF_RING_BELL=y
 # PTXCONF_RT_TESTS is not set
 # PTXCONF_TIOBENCH is not set
 
